<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bkg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white_bkg"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="10dp"
                android:tag="@{model->user.phoneNumber}"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/text_s" />

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:padding="2dp"
                android:tag="@{model->user.deletePhone;click->deletePhone}"
                android:visibility="gone"
                app:iiv_color="@color/text_gray"
                app:iiv_icon="typ-delete"
                tools:visibility="visible" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_phone"
            android:layout_margin="10dp"
            android:background="@color/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_line"
                android:background="@null"
                android:hint="@string/import_input_verification_code"
                android:inputType="textPassword"
                android:maxLength="4"
                android:maxLines="1"
                android:padding="10dp"
                android:tag="@{model->user.code}"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/text_s" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_btn_info"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:tag="@{click->sendVerificationCode}"
                android:text="发送验证码"
                android:textColor="@color/text_white" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/user_btn_black"
            android:gravity="center"
            android:tag="@{click->login}"
            android:text="@string/login"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_s" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ll_container"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:tag="@{click->lookUp}"
        android:text="@string/lookup"
        android:textColor="@color/text_info"
        android:textSize="@dimen/text_s" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:tag="@{click->openUserAgreement}"
        android:text="@string/user_agreement"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_s" />
</RelativeLayout>

